--- a/groceryapp/package.json
+++ b/groceryapp/package.json
@@ -19,7 +19,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vite": "^7.1.2"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -33,7 +35,6 @@
     "globals": "^16.3.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "typescript-eslint": "^8.39.1"
   }
 }
